# Pandas_100_knocks

./: 01_Polars_100_Knocks_for_colab.ipynb  README.md  [Qiita]Python初学者のためのPandas100本ノック.url  pandas_100knocks_index_v1.0.3.xlsx  pyproject.toml
input/: a_000.txt  a_001.txt  a_002.txt  a_003.txt  a_004.txt  a_005.txt  a_006.txt  a_007.txt  a_008.txt  a_009.txt  a_010.txt  a_011.txt  a_012.txt  a_013.txt  a_014.txt  a_015.txt  a_016.txt  a_017.txt  a_018.txt  a_019.txt  a_020.txt  a_021.txt  a_022.txt  a_023.txt  a_024.txt  a_025.txt  a_026.txt  a_027.txt  a_028.txt  a_029.txt  a_030.txt  a_031.txt  a_032.txt  a_033.txt  a_034.txt  a_035.txt  a_036.txt  a_037.txt  a_038.txt  a_039.txt  (+155 more)
notebook/: 01_Pandas_100_Knocks_for_Begginer(all_answer_displayed).ipynb  01_Pandas_100_Knocks_for_Begginer(all_answer_displayed)_v1.0.6.ipynb  01_Pandas_100_Knocks_for_Begginer.ipynb  02_Pandas_100_Knocks_for_Begginer_Random_Knocks.ipynb  03_Titanic_Passengers_Prediction.ipynb  03_Titanic_Passengers_Prediction_v1.0.6.ipynb
notebook/.ipynb_checkpoints/: 01_Pandas_100_Knocks_for_Begginer(all_answer_displayed)_v1.0.5-checkpoint.ipynb  01_Pandas_100_Knocks_for_Begginer(all_answer_displayed)_v1.0.6-checkpoint.ipynb  01_Pandas_100_Knocks_for_Begginer(all_answer_displayed)_v1.02-checkpoint.ipynb  01_Pandas_100_Knocks_for_Begginer_v1.0-checkpoint.ipynb  01_Pandas_100_Knocks_for_Begginer_v1.0.4-checkpoint.ipynb  01_Pandas_100_Knocks_for_Begginer_v1.0.5-checkpoint.ipynb  01_Pandas_100_Knocks_for_Begginer_v1.0.6-checkpoint.ipynb  (+7 more)
output/: submission.csv
