[tool.poetry]
name = "pandas-100-knocks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.0"
fireducks = "^0.9.0"
ipykernel = "^6.27.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
